develop main page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Heeeeeadeeer</h1>
+    <main>
+        <span>Главная страница</span>
+    </main>
     <script src="index.js"></script>
 </body>
 </html>
