made changes in feature/user-access

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <main>
         <span>Главная страница</span>
     </main>
+    <footer>
+        <span>
+            Footer
+        </span>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
