made changes master

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>Test Git2</title>
 </head>
 <body>
-    <h1>Heeeeeadeeer</h1>
-    <main>
-        <span>Главная страница</span>
-    </main>
+    <h1>Main Header</h1>
     <script src="index.js"></script>
 </body>
 </html>
